[fix] timetable day nav on safari

--- a/source/sass/modules/organisms/_timetable-day-navigation.sass
+++ b/source/sass/modules/organisms/_timetable-day-navigation.sass
@@ -46,6 +46,7 @@
   -webkit-overflow-scrolling: touch
 
 .tt_navDay
+  flex-shrink: 0
   margin-bottom: $space
   padding: $space-quarter
   text-align: center
